Applied the KISS principle

--- a/mobile.css
+++ b/mobile.css
@@ -163,6 +163,7 @@
 		background: transparent;
 	}
 
+	.online-control .input,
 	.online-control .input::placeholder {
 		color: var(--full-white-color);
 	}
